--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    </nav>  
        </div>
    <header>
-     <div class="profile-image"><img src="Imagefolder/Profile-image_1.png"></div>
+     <div class="profile-image"><img src="Profile-image_1.png"></div>
      <div id="welcome-section">
 <h1>Hey. I'm Adam Abdulkareem</h1>
 <p>a full stack developer and also a camper at <a href="https://www.freecodecamp.org/">freecodecamp.</a> I have been in the IT industry for about 3 years. Due to my proclivity for tech, I implemented my own tech firm <span>Alpha Code</span> recently. <img src=""></p>
@@ -35,38 +35,38 @@
      <div id="project"><h2>Personal project</h2>
  <div class="W-image">
          <a href="#" id="l-page">
-   <img src="Imagefolder/Image_1.jpg"><p class="project-title">Landing page</p></a>
+   <img src="Image_1.jpg"><p class="project-title">Landing page</p></a>
 </div>
  <div class="W-image">
          <a href="#" id="t-page">
-   <img src="Imagefolder/Image_2.jpeg"><p class="project-title">Tribute page</p></a>
+   <img src="Image_2.jpeg"><p class="project-title">Tribute page</p></a>
 </div>
 <div class="W-image">
          <a href="#" id="blog-p">
-   <img src="Imagefolder/Image_3.jpeg"><p class="project-title">Blog post</p></a>
+   <img src="Image_3.jpeg"><p class="project-title">Blog post</p></a>
 </div>
      </div>
    </section>
    <article>
      <h2>Diploma</h2>
     <div id="diploma">
-     <div><img src="Imagefolder/Image_4.jpeg"></div>
-     <div><img src="Imagefolder/Image_5.jpeg"></div>
-     <div><img src="Imagefolder/Image_6.jpeg"></div>
+     <div><img src="Image_4.jpeg"></div>
+     <div><img src="Image_5.jpeg"></div>
+     <div><img src="Image_6.jpeg"></div>
    </div>
    </article>
    <footer>
      <h2>Contact me on</h2>
      <div id="profile">
-  <a id="profile-link" href="https://www.facebook.com/adam.abdulkareem.7547"><img src="Imagefolder/Icon_1.svg"></a>
-  <a id="profile-link" href="https://github.com/AdamAbdulkareem"><img src="Imagefolder/Icon_2.png"></a>  <br>
-  <a id="profile-link" href="https://twitter.com/adam_darey?s=09"><img src="Imagefolder/Icon_3.svg"></a>
-  <a id="profile-link" href="https://wa.me/+2348089406051"><img src="Imagefolder/Icon_4.svg"></a>
+  <a id="profile-link" href="https://www.facebook.com/adam.abdulkareem.7547"><img src="Icon_1.svg"></a>
+  <a id="profile-link" href="https://github.com/AdamAbdulkareem"><img src="Icon_2.png"></a>  <br>
+  <a id="profile-link" href="https://twitter.com/adam_darey?s=09"><img src="Icon_3.svg"></a>
+  <a id="profile-link" href="https://wa.me/+2348089406051"><img src="Icon_4.svg"></a>
      </div>
        <!--<hr> -->
        <div class="foot">
    <div class="disclaim">Designed by alpha code <br>
-   <img src="Imagefolder/Profile-image_2.png"></div>
+   <img src="Profile-image_2.png"></div>
    <div class="copy">&copy Copyright 2020</div>
      </div>
    </footer>
