--- a/index.html
+++ b/index.html
@@ -35,24 +35,24 @@
      <div id="project"><h2>Personal project</h2>
  <div class="W-image">
          <a href="#" id="l-page">
-   <img src="Image_1.jpg"><p class="project-title">Landing page</p></a>
+   <img src="Image_1"><p class="project-title">Landing page</p></a>
 </div>
  <div class="W-image">
          <a href="#" id="t-page">
-   <img src="Image_2.jpeg"><p class="project-title">Tribute page</p></a>
+   <img src="Image_2"><p class="project-title">Tribute page</p></a>
 </div>
 <div class="W-image">
          <a href="#" id="blog-p">
-   <img src="Image_3.jpeg"><p class="project-title">Blog post</p></a>
+   <img src="Image_3"><p class="project-title">Blog post</p></a>
 </div>
      </div>
    </section>
    <article>
      <h2>Diploma</h2>
     <div id="diploma">
-     <div><img src="Image_4.jpeg"></div>
-     <div><img src="Image_5.jpeg"></div>
-     <div><img src="Image_6.jpeg"></div>
+     <div><img src="Image_4"></div>
+     <div><img src="Image_5"></div>
+     <div><img src="Image_6"></div>
    </div>
    </article>
    <footer>
