--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
    <section>
      <div id="project"><h2>Personal project</h2>
  <div class="W-image">
-         <a href="https://adamabdulkareem.github.io/ProductLanding.github.io/" id="l-page">
+         <a href="https://adamabdulkareem.github.io/ProductLanding.github.io" id="l-page">
    <img src="Image_1"><p class="project-title">Landing page</p></a>
 </div>
  <div class="W-image">
