--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      <div class="profile-image"><img src="Profile-image_1.png"></div>
      <div id="welcome-section">
 <h1>Hey. I'm Adam Abdulkareem</h1>
-<p>a full stack developer and also a camper at <a href="https://www.freecodecamp.org/">freecodecamp.</a> I have been in the IT industry for about 3 years. Due to my proclivity for tech, I implemented my own tech firm <span>Alpha Code</span> recently. <img src=""></p>
+<p>a full stack developer and also a camper at <a href="https://www.freecodecamp.org/">freecodecamp.</a> I have been in the IT industry for about 3 years. Due to my proclivity for tech, I inaugurated <span>Alpha Code</span> recently. <img src=""></p>
      </div>
    </header>
    <section>
