--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
      </div>
    </section>
    <article>
-     <h2>Diploma</h2>
+     <h2>Diplomas</h2>
     <div id="diploma">
      <div><img src="Image_4"></div>
      <div><img src="Image_5"></div>
